--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>メディマインドエネルギー整体</title>
 <style>
-body {margin:0;font-family:"Hiragino Kaku Gothic Pro","Helvetica",sans-serif;background-color:#F0FFF4;color:#333;}
-.header{background-color:#C7E8C9;padding:50px 20px;text-align:center;}
+body {
+    margin:0;
+    font-family:"Hiragino Kaku Gothic Pro","Helvetica",sans-serif;
+    background-color:#F0FFF4;
+    color:#333;
+}
+.header {
+    background-color:#C7E8C9;
+    padding:70px 20px;
+    text-align:center;
+}
 .header h1{
     margin:0;
     font-size:2.4em;
@@ -17,23 +26,64 @@ body {margin:0;font-family:"Hiragino Kaku Gothic Pro","Helvetica",sans-serif;bac
     text-shadow:1px 1px 2px rgba(0,0,0,0.1);
 }
 .header p{font-size:1.1em;color:#3E6B57;}
-.section{padding:50px 20px;}
+
+.section {
+    padding:60px 20px;
+    margin-bottom:40px;
+}
 .section h2{text-align:center;margin-bottom:30px;color:#2F5D4E;}
 .section2{background-color:#E8F6E8;}
 .section3{background-color:#FFF8E7;}
 .main{background-color:#FDFDF7;padding:50px 20px;}
-.btn{display:inline-block;background-color:#3E6B57;color:#fff;padding:14px 28px;text-decoration:none;border-radius:20px;transition:0.3s;font-weight:bold;}
+
+.btn{
+    display:inline-block;
+    background-color:#3E6B57;
+    color:#fff;
+    padding:14px 28px;
+    text-decoration:none;
+    border-radius:20px;
+    transition:0.3s;
+    font-weight:bold;
+}
 .btn:hover{background-color:#2F5D4E;}
+
 ul{max-width:700px;margin:0 auto; padding-left:20px;}
 ul li{margin-bottom:25px;line-height:1.6;}
+
 a{color:#3E6B57;text-decoration:none;border-radius:8px;padding:4px 8px;}
 a:hover{background-color:#C7E8C9;color:#fff;}
-.footer{background-color:#FFF8E7;padding:20px;text-align:center;font-size:0.9em;}
+
+.footer{
+    background-color:#FFF8E7;
+    padding:30px 20px;
+    text-align:center;
+    font-size:0.9em;
+}
 
 /* 予約フォーム */
-form{max-width:600px;margin:auto;background-color:#FDFDF7;padding:25px;border-radius:15px;box-shadow:0 4px 10px rgba(0,0,0,0.05);}
-input, textarea, select{width:100%;padding:14px;margin:10px 0;border-radius:10px;border:1px solid #ccc;}
-input[type=submit]{background-color:#3E6B57;color:#fff;border:none;cursor:pointer;font-weight:bold;}
+form{
+    max-width:600px;
+    margin:auto;
+    background-color:#FDFDF7;
+    padding:25px;
+    border-radius:15px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.05);
+}
+input, textarea, select{
+    width:100%;
+    padding:14px;
+    margin:10px 0;
+    border-radius:10px;
+    border:1px solid #ccc;
+}
+input[type=submit]{
+    background-color:#3E6B57;
+    color:#fff;
+    border:none;
+    cursor:pointer;
+    font-weight:bold;
+}
 input[type=submit]:hover{background-color:#2F5D4E;}
 
 /* カレンダー */
@@ -46,7 +96,14 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
 .faq-item p{margin:0 0 10px 0;line-height:1.6;}
 
 /* お問い合わせの左右均等 */
-.contact-flex{display:flex; justify-content:space-around; max-width:600px; margin:0 auto; flex-wrap:wrap; text-align:center;}
+.contact-flex{
+    display:flex;
+    justify-content:space-around;
+    max-width:600px;
+    margin:0 auto;
+    flex-wrap:wrap;
+    text-align:center;
+}
 .contact-flex p{margin:10px 0;}
 </style>
 </head>
