--- a/index.html
+++ b/index.html
@@ -53,6 +53,17 @@ p {line-height:1.6;}
     text-align:center;
 }
 .btn:hover {background-color:#FF6347;}
+.top-btn {
+    font-size:1.3em;
+    padding:18px 36px;
+    border-radius:30px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.15);
+    transition:0.3s;
+}
+.top-btn:hover {
+    background-color:#FF4500;
+    transform:scale(1.05);
+}
 ul {max-width:700px; margin:0 auto; padding-left:20px;}
 ul li {margin-bottom:25px; line-height:1.6;}
 
@@ -106,6 +117,9 @@ iframe {width:100%; max-width:100%; border-radius:15px;}
 <section id="top">
   <h1>メディマインドエネルギー整体</h1>
   <p style="text-align:center;">心と体のバランスを整える癒しの整体</p>
+  <div style="text-align:center; margin-top:50px;">
+    <a href="#reservation-form" class="btn top-btn">ご予約はこちら</a>
+  </div>
 </section>
 
 <!-- 当院の特徴 -->
