--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
       padding: 60px 20px;
       max-width: 1000px;
       margin: auto;
-      border-bottom: 2px solid #FFE0C2; /* セクション仕切り線 */
+      border-bottom: 2px solid #FFE0C2;
     }
 
     .section:nth-child(even) {
-      background: #FFF3E6; /* 偶数セクションは淡いオレンジ背景 */
+      background: #FFF3E6;
     }
 
     .section h2 {
@@ -71,7 +71,6 @@
       padding-bottom: 5px;
     }
 
-    /* 当院の特徴 */
     .features-container {
       display: flex;
       flex-wrap: wrap;
@@ -96,7 +95,6 @@
       margin-bottom: 10px;
     }
 
-    /* 施術メニュー */
     .menu-container {
       display: flex;
       flex-wrap: wrap;
@@ -135,7 +133,6 @@
       background: #E76F51;
     }
 
-    /* よくある質問 */
     .faq-item {
       background: #fff;
       padding: 15px 20px;
@@ -149,7 +146,6 @@
       font-size: 1.1em;
     }
 
-    /* お問い合わせ */
     #contact {
       background: #FFEEDD;
       border-radius: 15px;
@@ -169,6 +165,12 @@
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
       min-width: 200px;
       text-align: center;
+    }
+    .note {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 0.9em;
+      color: #555;
     }
 
     .footer {
@@ -208,7 +210,6 @@
   </nav>
 </header>
 
-<!-- 当院の特徴 -->
 <section id="features" class="section">
   <h2>当院の特徴</h2>
   <div class="features-container">
@@ -227,7 +228,6 @@
   </div>
 </section>
 
-<!-- 施術メニュー -->
 <section id="menu" class="section">
   <h2>施術メニュー</h2>
   <div class="menu-container">
@@ -257,7 +257,6 @@
   </div>
 </section>
 
-<!-- よくある質問 -->
 <section id="faq" class="section">
   <h2>よくある質問</h2>
   <div class="faq-item">
@@ -286,16 +285,15 @@
   </div>
 </section>
 
-<!-- お問い合わせ -->
 <section id="contact" class="section">
   <h2>お問い合わせ</h2>
   <div class="contact-flex">
     <p>📞 <a href="tel:08018909043">080-1890-9043</a></p>
     <p>📧 <a href="mailto:clayry_touch@yahoo.co.jp">clayry_touch@yahoo.co.jp</a></p>
   </div>
+  <p class="note">※施術中はお電話に出られない場合があります。その際は折り返しご連絡いたします。</p>
 </section>
 
-<!-- フッター -->
 <div class="footer">
   <p>&copy; 2025 メディマインドエネルギー整体</p>
 </div>
