--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     header {
       background: linear-gradient(135deg, #FF914D, #FFB347);
       color: white;
-      padding: 20px 15px;
+      padding: 10px 15px; /* ← 小さめに変更 */
       text-align: center;
       position: sticky;
       top: 0;
@@ -26,21 +26,21 @@
 
     header h1 {
       margin: 0;
-      font-size: 1.8em;
+      font-size: 1.5em; /* ← 少し小さめに変更 */
       font-weight: bold;
       letter-spacing: 2px;
     }
 
     nav {
-      margin-top: 15px;
+      margin-top: 8px; /* ← 少し余白を狭める */
     }
 
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 10px;
+      margin: 0 8px;
       font-weight: bold;
-      padding: 8px 15px;
+      padding: 6px 12px;
       border-radius: 25px;
       background: rgba(255,255,255,0.2);
       transition: background 0.3s;
